# math_agent_vikhr

./: .gitignore  LICENSE  README.md  benchmark_openai.py  benchmark_openrouter.py  benchmark_sonnet_only.py  config.py  create_failed_dataset.py  easy.json  failed_tasks.json  filtered_valid.json  flake.nix  lean_verifier.py  linnganguli.py  micro_subset.txt  parse_logs.py  process_lean.py  pyproject.toml  requirements.txt  run_phoenix.sh  runner.py  test_sonnet.py  valid.json  valid_results_sonnet_only.txt  verify_task.py
agents/: __init__.py  math_prover_agent.py  tools.py
configs/: config.yaml  config_loader.py  run.yaml
lean-dojo-mew/: lake-manifest.json  lakefile.lean.bak
lean-dojo-mew/MiniF2F/: test_theorem.lean
validate_lean/: Main.lean  README.md  ValidateLean.lean  lake-manifest.json  lakefile.toml
verify_lean/: Main.lean  README.md  VerifyLean.lean  lake-manifest.json  lakefile.toml
verify_lean/VerifyLean/: minif2f_import.lean
